--- a/src/AppBundle/Resources/views/event/view.html.twig
+++ b/src/AppBundle/Resources/views/event/view.html.twig
@@ -11,7 +11,16 @@
     </div>
     <div class="row">
         <div class="col-lg-12 text-center">
-            <div id="clock">
+            <div id="clock" data-timestamp="{{ event.date.timestamp }}">
+
+                <div>
+                    <span class="years"></span>
+                    <div class="smalltext">années</div>
+                </div>
+                <div>
+                    <span class="months"></span>
+                    <div class="smalltext">mois</div>
+                </div>
                 <div>
                     <span class="days"></span>
                     <div class="smalltext">jours</div>
