--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" media="screen" type="text/css" href="{{ asset('app.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon-16x16.png') }}">
 </head>
 <body>
 <div class="container">
