--- a/src/AppBundle/Resources/views/event/view.html.twig
+++ b/src/AppBundle/Resources/views/event/view.html.twig
@@ -38,11 +38,19 @@
                     <div class="smalltext">secondes</div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            {% if event.description %}
 
-
-            <p>
-                {{ event.description | nl2br }}
-            </p>
+                <h4>Détails</h4>
+                <hr/>
+                <p>
+                    {{ event.description | nl2br }}
+                    <br/><br/>
+                </p>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
