feat: change menu + add link on index

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="{{ path('homepage') }}">Home</a></li>
                 <li><a href="{{ path('event_create') }}">Créer</a></li>
             </ul>
         </nav>
