--- a/src/AppBundle/Resources/views/event/index.html.twig
+++ b/src/AppBundle/Resources/views/event/index.html.twig
@@ -6,7 +6,7 @@
         <p class="lead">
             Parce que chaque moment fatidique a besoin de <strong>son compteur</strong>...
         </p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Créer un compteur fatidique</a></p>
+        <p><a class="btn btn-lg btn-success" href="{{ path('event_create') }}" role="button">Créer un compteur fatidique</a></p>
     </div>
 
     <div class="row marketing">
