feat: add fontawesome

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -16,10 +16,10 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li><a href="{{ path('homepage') }}">Home</a></li>
-                <li><a href="{{ path('event_create') }}">Créer</a></li>
+                <li><a href="{{ path('event_create') }}"><i class="fa fa-plus"></i> Créer</a></li>
             </ul>
         </nav>
-        <h1 class="text-muted">Fatidique</h1>
+        <h1 class="text-muted"><i class="fa fa-clock-o"></i> Fatidique</h1>
     </div>
 
     {% block body %}{% endblock %}
