--- a/src/AppBundle/Resources/views/event/create.html.twig
+++ b/src/AppBundle/Resources/views/event/create.html.twig
@@ -17,7 +17,7 @@
         <div class="col-lg-12">
             {{ form_start(form) }}
             {{ form_widget(form) }}
-            <button type="submit" class="btn btn-default pull-right">Enregistrer</button>
+            <button type="submit" class="btn btn-default pull-right"><i class="fa fa-send"></i> Enregistrer</button>
             {{ form_end(form) }}
         </div>
     </div>
