feat: add description for site

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Fatidique | Parce que haque moment fatidique a besoin de son compteur{% endblock %}</title>
+    <meta name='description' content="{% block description %}Le temps n'est rien sans un moment fatidique.{% endblock %}"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" media="screen" type="text/css" href="{{ asset('app.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
