--- a/src/AppBundle/Resources/views/event/create.html.twig
+++ b/src/AppBundle/Resources/views/event/create.html.twig
@@ -1,5 +1,8 @@
 {% extends '@App/base.html.twig' %}
 
+{% block title %}Créer un compteur fatidique{% endblock %}
+{% block description %}Créer un compteur fatidique en remplissant le formulaire ci dessous{% endblock %}
+
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block body %}
