feat: add responsive viewport meta

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>{% block title %}Fatidique | Parce que chaque moment fatidique a besoin de son compteur{% endblock %}</title>
-    <meta name='description' content="{% block description %}Le temps n'est rien sans un moment fatidique.{% endblock %}"/>
+    <meta name='description'
+          content="{% block description %}Le temps n'est rien sans un moment fatidique.{% endblock %}"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" media="screen" type="text/css" href="{{ asset('app.css') }}"/>
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
     <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon-32x32.png') }}">
