refactor: add a theme that extends bootstrap one (issues with icons)

--- a/src/AppBundle/Resources/views/event/create.html.twig
+++ b/src/AppBundle/Resources/views/event/create.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Créer un compteur fatidique{% endblock %}
 {% block description %}Créer un compteur fatidique en remplissant le formulaire ci dessous{% endblock %}
 
-{% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
+{% form_theme form '@App/theme/extended-form-theme.twig' %}
 
 {% block body %}
 
