fix: hide site title on small device

--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -22,7 +22,7 @@
                 <li><a href="{{ path('event_create') }}"><i class="fa fa-plus"></i> Créer</a></li>
             </ul>
         </nav>
-        <h1 class="text-muted"><i class="fa fa-clock-o"></i> Fatidique</h1>
+        <h1 class="text-muted"><i class="fa fa-clock-o"></i> <span class="hidden-xs">Fatidique</span></h1>
     </div>
 
     {% block body %}{% endblock %}
