refactor: improve a little bit the design

--- a/src/AppBundle/Resources/views/event/index.html.twig
+++ b/src/AppBundle/Resources/views/event/index.html.twig
@@ -4,9 +4,11 @@
     <div class="jumbotron">
         <h2>Fatidique</h2>
         <p class="lead">
-            Parce que chaque moment fatidique a besoin de <strong>son compteur</strong>...
+            Parce que chaque moment fatidique a besoin de <br/><strong>son compteur</strong>...
         </p>
-        <p><a class="btn btn-lg btn-info" href="{{ path('event_create') }}" role="button"><i class="fa fa-plus"></i> Créer un compteur <span class="visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline">fatidique</span></a></p>
+        <p><a class="btn btn-lg btn-info" href="{{ path('event_create') }}" role="button"><i class="fa fa-plus"></i>
+                Créer un compteur <span class="visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline">fatidique</span></a>
+        </p>
     </div>
 
     <div class="row marketing">
