feat: little cosmetic change

--- a/src/AppBundle/Resources/views/event/index.html.twig
+++ b/src/AppBundle/Resources/views/event/index.html.twig
@@ -22,7 +22,7 @@
             </p>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 text-right">
             <h3>Moments fatidique</h3>
             <p>
                 {# @var event \AppBundle\Entity\Event #}
