--- a/src/AppBundle/Resources/views/event/create.html.twig
+++ b/src/AppBundle/Resources/views/event/create.html.twig
@@ -24,4 +24,11 @@
             {{ form_end(form) }}
         </div>
     </div>
+    <div class="row marketing">
+        <div class="col-lg-12 alert-container">
+            <p class="alert alert-info">
+                <em>{{ 'note.private' | trans }}</em>
+            </p>
+        </div>
+    </div>
 {% endblock %}
