--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3 text-center">
         <h2>Fatidique</h2>
         <p class="lead">
             Parce que chaque moment fatidique a besoin de <br/><strong>son compteur</strong>...
         </p>
-        <p><a class="btn btn-lg btn-info" href="{{ path('event_create') }}" role="button"><i class="fa fa-plus"></i>
+        <p><a class="btn btn-lg btn-outline-primary" href="{{ path('event_create') }}" role="button"><i class="fa fa-plus"></i>
                 Créer un compteur <span class="visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline">fatidique</span></a>
         </p>
     </div>
