--- a/templates/event/create.html.twig
+++ b/templates/event/create.html.twig
@@ -3,16 +3,20 @@
 {% block title %}Créer un compteur fatidique{% endblock %}
 {% block description %}Créer un compteur fatidique en remplissant le formulaire ci dessous{% endblock %}
 
-{% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
+{% form_theme form 'bootstrap_5_horizontal_layout.html.twig' %}
 
 {% block body %}
 
     <div class="row marketing">
         <div class="col-lg-12">
-            <blockquote class="blockquote text-right">
-                <p class="mb-0">La distance Grappille le temps.</p>
-                <footer class="blockquote-footer">Eugène Guillevic</footer>
-            </blockquote>
+            <figure>
+                <blockquote class="blockquote text-end">
+                    <p class="mb-0">La distance Grappille le temps.</p>
+                </blockquote>
+                <figcaption class="blockquote-footer text-end">
+                    Eugène Guillevic
+                </figcaption>
+            </figure>
         </div>
     </div>
 
@@ -20,7 +24,7 @@
         <div class="col-lg-12">
             {{ form_start(form) }}
             {{ form_widget(form) }}
-            <button type="submit" class="btn btn-primary float-right"><i class="fas fa-paper-plane"></i> Enregistrer</button>
+            <button type="submit" class="btn btn-primary float-end"><i class="fas fa-paper-plane"></i> Enregistrer</button>
             {{ form_end(form) }}
         </div>
     </div>
