--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,61 +8,37 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" media="screen" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
-    {{ encore_entry_link_tags('app') }}
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon-32x32.png') }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon-16x16.png') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    {{ vite_entry_link_tags('app') }}
+    {{ vite_entry_script_tags('app') }}
+    <link rel="icon" type="image/x-icon" href="{{ asset('assets/favicon.ico') }}"/>
+    {#
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('assets/favicon32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('assets/favicon16.png') }}">
+    #}
 </head>
 <body>
-<div class="container">
+<div class="container mx-auto">
 
-    <div class="header clearfix">
-        {% set currentRoute = app.request.attributes.get('_route') %}
-
-        <div class="row">
-            <div class="col">
-                <h1 class="text-muted"><i class="far fa-clock"></i> <span class="hidden-xs">Fatidique</span></h1>
-            </div>
-            <div class="col">
-                <nav>
-                    <ul class="nav nav-pills justify-content-end">
-                        <li class="nav-item"><a class="nav-link {{ currentRoute == 'homepage' ? 'active' : '' }}"
-                                                href="{{ path('homepage') }}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link {{ currentRoute == 'event_create' ? 'active' : '' }}"
-                                                href="{{ path('event_create') }}"><i class="fa fa-plus"></i> Créer</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-
-        </div>
-    </div>
+    {% include 'header.html.twig' %}
 
     {% block body %}{% endblock %}
-
-    <footer class="footer">
-        <p>&copy; {{ 'now' | date('Y') }} Fatidique, Inc.</p>
-    </footer>
 </div>
-{{ encore_entry_script_tags('app') }}
+
+<footer class="footer footer-center p-4 text-base-content mt-40">
+    <aside>
+        <p>&copy; {{ 'now' | date('Y') }} Fatidique, Inc.</p>
+    </aside>
+</footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-101631975-1"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-101631975-1', 'auto');
-  ga('send', 'pageview');
-
+  gtag('config', 'UA-101631975-1');
 </script>
+
 </body>
 </html>
