chore: ugprade google analyticstag

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,13 +31,13 @@
     </aside>
 </footer>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-101631975-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XM1K8HN77Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-101631975-1');
+  gtag('config', 'G-XM1K8HN77Q');
 </script>
 
 </body>
