chore: add png icons

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,10 +12,8 @@
     {{ vite_entry_link_tags('app') }}
     {{ vite_entry_script_tags('app') }}
     <link rel="icon" type="image/x-icon" href="{{ asset('assets/favicon.ico') }}"/>
-    {#
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('assets/favicon32.png') }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('assets/favicon16.png') }}">
-    #}
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('assets/favicon32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('assets/favicon16x16.png') }}">
 </head>
 <body>
 <div class="container mx-auto">
